Fix: prevent footer from overflow

--- a/css/style.css
+++ b/css/style.css
@@ -1635,7 +1635,7 @@ body {
   height: 3.2rem;
 }
 @media (max-width: 47em) {
-  .logo-img--mob-sm {
+  .logo-img {
     width: 11.7rem;
     height: 2.3rem;
   }
